# reds-stats-tracker

./: .gitignore  <stdout>  README.md  bwar_cache.json  dev.sh  fetch_stats.py  pyproject.toml  requirements.txt
.github/workflows/: update-stats.yml
data/caches/: bwar_cache.json  fwar_cache.json
data/schedule/: 2026.json
data/snapshots/: fielding-2026.ndjson  hitting-2026.ndjson  pitching-2026.ndjson
deploy/: install.sh  scheduler.ts  update.sh
deploy/systemd/: reds-scheduler.service  reds-scheduler.timer  reds-update.service  reds-update.timer
pipeline/: __init__.py  backfill.py  config.py  mlb_api.py  names.py  readme.py  run.py  schedule.py  snapshots.py  stats.py  war.py
site/: observablehq.config.js  package.json
site/src/: compare.md  fielding.md  hitting.md  index.md  pitching.md  style.css  trends.md
site/src/.observablehq/cache/: _build.json
site/src/.observablehq/cache/_npm/apache-arrow@21.1.0/: _esm.js
site/src/.observablehq/cache/_npm/parquet-wasm@0.7.2/: _esm.js
site/src/.observablehq/cache/_npm/tslib@2.8.1/: _esm.js
site/src/.observablehq/cache/data/: latest.json  team.json
site/src/components/: calendarBar.js  radar.js  statTable.js
site/src/data/: latest.json.py  schedule.json.py  snapshots.parquet.py  team.json.py
