[project]
name = "reds-stats-tracker"
version = "2.0.0"
description = "Cincinnati Reds stats pipeline — MLB Stats API + bWAR + fWAR, daily NDJSON snapshots"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "cloudscraper>=1.2.71",
    "pybaseball>=2.2.7",
    "pyarrow>=15.0.0",
]

[tool.uv]
package = false
